# todolist-qt6

./: CMakeLists.txt  Task.cpp  TaskManager.cpp  TaskManager.h  main.cpp  task.h
qml/: Main.qml
